# psvr2-linux-adapter

./: .gitignore  99-psvr2.rules  CMakeLists.txt  CONTRIBUTING.md  README.md  build-all.sh  build.sh  cleanup.sh  configure.sh  fix-build.sh  install.sh  make-scripts-executable.sh  uninstall.sh
.github/workflows/: build.yml
docs/: build_system.md  debugging.md  device_info.md  display.md  hardware.md  hardware_requirements.md  index.md  install.md  protocol.md  references.md  roadmap.md  steamvr.md
docs/debugging/: README.md  index.md  kernel_module_debugging.md  runtime_debugging.md  troubleshooting_guide.md  usb_protocol_debugging.md
kernel/: 99-psvr2.rules  CMakeLists.txt  Makefile  dkms.conf  psvr2.h  psvr2_aux.c  psvr2_camera.c  psvr2_gaze.c  psvr2_imu.c  psvr2_input.c  psvr2_protocol.h  psvr2_slam.c  psvr2_status.c  psvr2_uapi.h  psvr2_usb.c
kernel/include/psvr2/: psvr2_adapter.h
kernel/module/: Makefile.in  psvr2_adapter_main.c  psvr2_dev.sh  psvr2_hid.c  psvr2_input.c
kernel/module/debug/: Makefile.test  README.md  psvr2_adapter_debug_template.c  psvr2_debug.h  psvr2_debug.sh  psvr2_incremental_test.sh  simple_test.c
kernel/module/fixed/: psvr2_display.c
packaging/: PKGBUILD
patches/: amdgpu-psvr2-dsc-fec.patch  apply-amdgpu-dsc.sh
scripts/: capture-fork-display.sh  capture-fork-usb.sh  capture-our-usb.sh  dev-load.sh  dev-unload.sh  diff-usb-init.sh  drive-display.sh  pose-capture.sh  pose-guide.sh  test-cameras.sh  test-wayland-lease.sh
steamvr/: install-steamvr-driver.sh
steamvr/driver_psvr2/: CMakeLists.txt
steamvr/driver_psvr2/resources/: driver.vrdrivermanifest
steamvr/driver_psvr2/resources/settings/: default.vrsettings
steamvr/driver_psvr2/src/: device_provider.cpp  device_provider.h  hmd_device_driver.cpp  hmd_device_driver.h  hmd_driver_factory.cpp  pose_source.cpp  pose_source.h
tests/: test_invariant_psvr2_slam.c
tools/: README.md  build-test.sh  capture-usb.sh  debug-helper.sh  find-device.sh  psvr2-usb-capture.pcapng
userspace/lib/: Makefile  libpsvr2.c  libpsvr2.h  libpsvr2.pc  psvr2-monitor.c
userspace/tools/: Makefile  font8x8.h  psvr2-display-up.sh  psvr2-gaze-test.c  psvr2-imu-test.c  psvr2-kms-modeset.c  psvr2-pose-guide.c  psvr2-pose-log.c  psvr2-pose-test.c  vk-acquire-drm-display.c
